@startuml
GraphView *-- GraphViewTouchEventHandler
GraphView *-- BookRenderer
GraphView *-- GraphCanvas
GraphViewTouchEventHandler *-- Game
GraphViewTouchEventHandler *-- BookRenderer
GraphCanvas *-- GraphView
GraphCanvas *-- ActionColor
BookRenderer *-- Game

class GraphView {
    +onMeasure()
    +onDraw()
    +onTouchEvent()
    +center()
}
note top of GraphView : View component visible in app\nand receives all user input

class GraphViewTouchEventHandler {
    +onTouchEvent()
}
note top of GraphViewTouchEventHandler : calls methods on game based on user input

class GraphCanvas {
    +translate(canvas)
    +render(canvas, List<GraphEntry>, List<GraphEdge>)
    -drawGraphEntry()
    -drawGraphEdge()
}
note top of GraphCanvas : renders graph to canvas

class ActionColor {
    +getColor(GraphView, wayMark, visit)
}

class BookRenderer {
    +render()
    +center()
    +touch()
}
note bottom of BookRenderer : calculates all information necessary for rendering,\nbut is independent of all rendering components

class Game
@enduml